# diablo2

./: LICENSE  README.md
d2read/: Makefile  THANKS  i2read.cc  item.cc  main.cc  savegame.cc  savegame.h
d2savelib/: AUTHORS  COPYING  README  configure.ac
d2savelib/examples/: Makefile.am  d2xml.cc  i2test.cc
d2savelib/include/: bitstreamer.h  item.h  itemnames.h  itemproperty.h  savegame.h  stash.h
d2savelib/scripts/: generate-item-decls.pl  generate-item-statcost.pl
d2savelib/src/: Makefile.am  bitstreamer.cc  d2s2xml.cc  item.cc  itemnames.cc  itemproperty.cc  itemprops.cc  itemtypes.cc  savegame.cc  stash.cc
diablo2-itemsite-mysql/: readme.txt
diablo2-itemsite-mysql/code/: char.php  chars.php  db_settings.php  index.php  layout.php  lib.php  login.php  logout.php  owner.php  set.php  sets.php  unique.php  unique_cat.php  uniques.php  you.php
diablo2-itemsite-mysql/sql/: diablo2.sql
diablo2-itemsite-pgsql/: readme.txt
diablo2-itemsite-pgsql/scripts/: build-cache.pl  charmig.pl  config.sample.pl  d2mig.pl  import.pl  l2mig.pl  mig-plusspells.pl  mig-spells.pl
diablo2-itemsite-pgsql/sql/: diablo2-filled.sql  diablo2.sql
diablo2-itemsite-pgsql/templates/: cat_items.tpl  cats.tpl  char.tpl  chars.tpl  footer.tpl  header.tpl  index.tpl  item-details.tpl  item-type.tpl  item.tpl  overview.tpl  search.tpl  set.tpl  sets.tpl  types.tpl
diablo2-itemsite-pgsql/www/: category.php  cats.php  char.php  chars.php  config.sample.php  (+10 more)
downloads/: d2read.tar.bz2  d2savelib-20100131.tar.bz2  diablo2-itemsite.mysql.tar.bz2  diablo2-itemsite.pgsql.tar.bz2
(+39 files in other folders)
