AM_CPPFLAGS = -I$(srcdir)/../include
lib_LTLIBRARIES = libd2save.la
libd2save_la_SOURCES = bitstreamer.cc item.cc itemnames.cc stash.cc \
                       itemproperty.cc itemprops.cc itemtypes.cc savegame.cc \
                       bitstreamer.h item.h itemnames.h itemproperty.h \
                       savegame.h stash.h
